# Inteli-College-2024-2B-T10-SI08-G03

./: .coverage  .gitignore  Dockerfile.api  Dockerfile.etl  Dockerfile.frontend  README.md  docker-compose.yml  ini.py  load.py  mkdocs.yml  pyproject.toml  pytest.ini
document/: mkdocs.yml  pyproject.toml
document/docs/: AnaliseDeNegocios.md  AnaliseDeUsuario.md  AnaliseImpactoEtico.md  AnáliseFinanceira.md  Arquitetura.md  CuboDeDados.md  DataModelCanvas.md  DocDataApp.md  DocumentacaoETL.md  Referencias.md  Wireframe.md  index.md
document/docs/css/: custom.css
htmlcov/: index.html  (+61 more)
src/: conftest.py  pyproject.toml  requirements.txt
src/API/: run.py
src/API/routes/: health.py  line_routes.py  principal_routes.py
src/API/services/: clickhouse_service.py
src/API/tests/: test_health.py  test_line_routes.py  test_principal_routes.py
src/aead/: analise-PCD.ipynb  analise-intervalos-estacoes.ipynb  analise-req-mat.ipynb  analise_embarque_periodo.ipynb  ocorrencias.ipynb
src/app/: requirements.txt  run.py
src/app/routes/: routes.py  routes_linha.py
src/app/services/: clickhouse.py
src/etlbronze/: dockerfile  etl_pipeline-deployment.yaml  etl_pipeline.py  prefect.yaml  pyproject.toml  requirements.txt  routes.py
src/etlbronze/Views/: IntervalosEstacoes.py  intervalo_de_trens.py  media_parado_por_estacao.py  qtd_pcd_dia.py  qtd_viagens_dia.py  qtd_viagens_estacao_por_dia.py  viagens_por_linha.py
src/etlbronze/etlapps/: intervalos.py  pcd.py  viagens.py
src/etlbronze/etlapps/config/: connection.py
src/etlbronze/services/: aws_conn.py  connections.py  create_view.py  obs_conn.py  parquet.py
src/etlbronze/services/servicesetl/serviceextract/: extract.py
src/etlbronze/services/servicesetl/serviceloading/: loading.py
src/etlbronze/tests/: test_app.py  test_create_qtd_pcd.py  test_extract.py  test_intervalo_de_trens.py  test_intervalos_estacoes.py  test_loading.py  test_logs.py  test_transform_intervalos.py  test_transform_pcd.py  test_transform_viagens.py  test_viagens_por_linha.py
src/etlbronze/tests/reports/: pedro_report.html  report-create-qtd-pcd.html  report-erik.html  report-izadora.html  report-kaylane.html  report-pedrofaria.html  report.html
src/frontend/: main.py  requirements.txt
src/frontend/Components/: Footer.py  Header.py  Login.py  SideBar.py
src/frontend/all_pages/: ex.py  home.py  line.py  login.py
src/frontend/services/: RequestToBackend.py  auth.py
src/frontend/styles/: Global.py
(+5 files in other folders)
