[tool.poetry]
name = "2024-2b-t10-si08-g03"
version = "0.1.0"
description = ""
authors = ["pedrofariasantos <124216750+pedrofariasantos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"