[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["3R11K <erikbatista1222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-include-markdown-plugin = "^7.0.1"
mkdocs-material = "^9.5.44"
cinder = "^25.0.0"
mkdocs-cinder = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
